--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -549,6 +549,12 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
 .alert-danger {
   background-color: #ff9966;
 }
+.mbr-section-btn a.btn:not(.btn-form) {
+  border-radius: 100px;
+}
+.mbr-gallery-filter li a {
+  border-radius: 100px !important;
+}
 .mbr-gallery-filter li.active .btn {
   background-color: #fcf8ff;
   border-color: #fcf8ff;
@@ -556,6 +562,9 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
 }
 .mbr-gallery-filter li.active .btn:focus {
   box-shadow: none;
+}
+.nav-tabs .nav-link {
+  border-radius: 100px !important;
 }
 a,
 a:hover {
@@ -612,6 +621,19 @@ blockquote {
   border-color: #fcf8ff;
 }
 /* Forms */
+.mbr-form .input-group-btn a.btn {
+  border-radius: 100px !important;
+}
+.mbr-form .input-group-btn a.btn:hover {
+  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
+}
+.mbr-form .input-group-btn button[type="submit"] {
+  border-radius: 100px !important;
+  padding: 1rem 3rem;
+}
+.mbr-form .input-group-btn button[type="submit"]:hover {
+  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
+}
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
   background-color: #fcf8ff;
@@ -793,14 +815,8 @@ a {
 .cid-ux3HJU0xu3 H5 {
   color: #cb8aff;
 }
-.cid-s48OLK6784 {
-  z-index: 1000;
-  width: 100%;
-  position: relative;
-  min-height: 60px;
-}
-.cid-s48OLK6784 nav.navbar {
-  position: fixed;
+.cid-s48OLK6784 .navbar-dropdown {
+  position: relative !important;
 }
 .cid-s48OLK6784 .dropdown-item:before {
   font-family: Moririse2 !important;
@@ -916,7 +932,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-s48OLK6784 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4rem);
+    max-height: calc(98.5vh - 5.6rem);
   }
 }
 .cid-s48OLK6784 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -1106,7 +1122,6 @@ a {
 }
 .cid-s48OLK6784 .navbar-dropdown {
   padding: .5rem 1rem;
-  position: fixed;
 }
 .cid-s48OLK6784 a.nav-link {
   display: flex;
@@ -1135,14 +1150,8 @@ a {
     left: -1rem;
   }
 }
-.cid-tfXaVXqwLS {
-  z-index: 1000;
-  width: 100%;
-  position: relative;
-  min-height: 60px;
-}
-.cid-tfXaVXqwLS nav.navbar {
-  position: fixed;
+.cid-tfXaVXqwLS .navbar-dropdown {
+  position: relative !important;
 }
 .cid-tfXaVXqwLS .dropdown-item:before {
   font-family: Moririse2 !important;
@@ -1258,7 +1267,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tfXaVXqwLS .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4rem);
+    max-height: calc(98.5vh - 5.6rem);
   }
 }
 .cid-tfXaVXqwLS .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -1448,7 +1457,6 @@ a {
 }
 .cid-tfXaVXqwLS .navbar-dropdown {
   padding: .5rem 1rem;
-  position: fixed;
 }
 .cid-tfXaVXqwLS a.nav-link {
   display: flex;
@@ -1681,14 +1689,8 @@ a {
 .cid-ux3HJU0xu3 H5 {
   color: #cb8aff;
 }
-.cid-tfXaIBb1c2 {
-  z-index: 1000;
-  width: 100%;
-  position: relative;
-  min-height: 60px;
-}
-.cid-tfXaIBb1c2 nav.navbar {
-  position: fixed;
+.cid-tfXaIBb1c2 .navbar-dropdown {
+  position: relative !important;
 }
 .cid-tfXaIBb1c2 .dropdown-item:before {
   font-family: Moririse2 !important;
@@ -1804,7 +1806,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tfXaIBb1c2 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4rem);
+    max-height: calc(98.5vh - 5.6rem);
   }
 }
 .cid-tfXaIBb1c2 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -1994,7 +1996,6 @@ a {
 }
 .cid-tfXaIBb1c2 .navbar-dropdown {
   padding: .5rem 1rem;
-  position: fixed;
 }
 .cid-tfXaIBb1c2 a.nav-link {
   display: flex;
@@ -2647,14 +2648,8 @@ a {
 .cid-ux3HJU0xu3 H5 {
   color: #cb8aff;
 }
-.cid-tzEstcqBu1 {
-  z-index: 1000;
-  width: 100%;
-  position: relative;
-  min-height: 60px;
-}
-.cid-tzEstcqBu1 nav.navbar {
-  position: fixed;
+.cid-tzEstcqBu1 .navbar-dropdown {
+  position: relative !important;
 }
 .cid-tzEstcqBu1 .dropdown-item:before {
   font-family: Moririse2 !important;
@@ -2770,7 +2765,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tzEstcqBu1 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4rem);
+    max-height: calc(98.5vh - 5.6rem);
   }
 }
 .cid-tzEstcqBu1 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -2960,7 +2955,6 @@ a {
 }
 .cid-tzEstcqBu1 .navbar-dropdown {
   padding: .5rem 1rem;
-  position: fixed;
 }
 .cid-tzEstcqBu1 a.nav-link {
   display: flex;
@@ -3689,14 +3683,8 @@ a {
 .cid-ux3HJU0xu3 H5 {
   color: #cb8aff;
 }
-.cid-tfXaIBb1c2 {
-  z-index: 1000;
-  width: 100%;
-  position: relative;
-  min-height: 60px;
-}
-.cid-tfXaIBb1c2 nav.navbar {
-  position: fixed;
+.cid-tfXaIBb1c2 .navbar-dropdown {
+  position: relative !important;
 }
 .cid-tfXaIBb1c2 .dropdown-item:before {
   font-family: Moririse2 !important;
@@ -3812,7 +3800,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tfXaIBb1c2 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4rem);
+    max-height: calc(98.5vh - 5.6rem);
   }
 }
 .cid-tfXaIBb1c2 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -4002,7 +3990,6 @@ a {
 }
 .cid-tfXaIBb1c2 .navbar-dropdown {
   padding: .5rem 1rem;
-  position: fixed;
 }
 .cid-tfXaIBb1c2 a.nav-link {
   display: flex;
@@ -4360,14 +4347,8 @@ a {
 .cid-ux3HJU0xu3 H5 {
   color: #cb8aff;
 }
-.cid-umhXhDLASs {
-  z-index: 1000;
-  width: 100%;
-  position: relative;
-  min-height: 60px;
-}
-.cid-umhXhDLASs nav.navbar {
-  position: fixed;
+.cid-umhXhDLASs .navbar-dropdown {
+  position: relative !important;
 }
 .cid-umhXhDLASs .dropdown-item:before {
   font-family: Moririse2 !important;
@@ -4483,7 +4464,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-umhXhDLASs .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4rem);
+    max-height: calc(98.5vh - 5.6rem);
   }
 }
 .cid-umhXhDLASs .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -4673,7 +4654,6 @@ a {
 }
 .cid-umhXhDLASs .navbar-dropdown {
   padding: .5rem 1rem;
-  position: fixed;
 }
 .cid-umhXhDLASs a.nav-link {
   display: flex;
@@ -5032,6 +5012,447 @@ a {
 }
 .cid-umhYs7XmmR img {
   width: 100%;
+}
+.cid-ux3HJU0xu3 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #fcf8ff;
+}
+.cid-ux3HJU0xu3 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-ux3HJU0xu3 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-ux3HJU0xu3 .media-wrap {
+  padding: 0;
+}
+@media (max-width: 991px) {
+  .cid-ux3HJU0xu3 .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-ux3HJU0xu3 .row {
+    text-align: center;
+  }
+  .cid-ux3HJU0xu3 .row > div {
+    margin: auto;
+  }
+  .cid-ux3HJU0xu3 .social-row {
+    justify-content: center;
+  }
+}
+.cid-ux3HJU0xu3 .social-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.cid-ux3HJU0xu3 .list {
+  list-style: none;
+  padding-left: 0;
+  color: #bbbbbb;
+}
+@media (max-width: 991px) {
+  .cid-ux3HJU0xu3 .list {
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-ux3HJU0xu3 .list {
+    margin-bottom: 0rem;
+  }
+}
+.cid-ux3HJU0xu3 .mbr-text {
+  color: #000000;
+}
+.cid-ux3HJU0xu3 .soc-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: white;
+  margin-right: 0.5rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  height: 2.5rem;
+  width: 2.5rem;
+}
+.cid-ux3HJU0xu3 .mbr-iconfont {
+  color: black;
+}
+@media (max-width: 991px) {
+  .cid-ux3HJU0xu3 div > *:last-child {
+    margin-top: 0 !important;
+  }
+}
+.cid-ux3HJU0xu3 H5 {
+  color: #cb8aff;
+}
+.cid-uI4UAlInD7 {
+  padding-top: 6rem;
+  padding-bottom: 0rem;
+  background-color: #fcf8ff;
+}
+.cid-uI4UAlInD7 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uI4UAlInD7 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-uI4UAlInD7 .video-wrapper iframe {
+  width: 100%;
+}
+.cid-uI4UAlInD7 .mbr-section-title,
+.cid-uI4UAlInD7 .mbr-section-subtitle,
+.cid-uI4UAlInD7 .mbr-text {
+  text-align: center;
+}
+.cid-tfXaVXqwLS .navbar-dropdown {
+  position: relative !important;
+}
+.cid-tfXaVXqwLS .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: '\e966';
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tfXaVXqwLS .dropdown-menu {
+  padding: 0;
+}
+.cid-tfXaVXqwLS .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-tfXaVXqwLS .dropdown-item:hover,
+.cid-tfXaVXqwLS .dropdown-item:focus {
+  background: #fcf8ff !important;
+  color: white !important;
+}
+.cid-tfXaVXqwLS .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: .667em 1em !important;
+}
+.cid-tfXaVXqwLS .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-tfXaVXqwLS .nav-link {
+  position: relative;
+}
+.cid-tfXaVXqwLS .container {
+  display: flex;
+  margin: auto;
+}
+.cid-tfXaVXqwLS .iconfont-wrapper {
+  color: #000000 !important;
+  font-size: 1.5rem;
+  padding-right: .5rem;
+}
+.cid-tfXaVXqwLS .navbar-caption {
+  padding-right: 4rem;
+}
+.cid-tfXaVXqwLS .dropdown-menu,
+.cid-tfXaVXqwLS .navbar.opened {
+  background: #fcf8ff !important;
+}
+.cid-tfXaVXqwLS .nav-item:focus,
+.cid-tfXaVXqwLS .nav-link:focus {
+  outline: none;
+}
+.cid-tfXaVXqwLS .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-tfXaVXqwLS .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-tfXaVXqwLS .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-left: -1.8rem;
+  padding-right: 1rem;
+  font-size: inherit;
+}
+.cid-tfXaVXqwLS .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tfXaVXqwLS .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-tfXaVXqwLS .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-tfXaVXqwLS .navbar {
+  min-height: 77px;
+  transition: all .3s;
+  border-bottom: 1px solid transparent;
+  background: #fcf8ff;
+}
+.cid-tfXaVXqwLS .navbar:not(.navbar-short) {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-tfXaVXqwLS .navbar.opened {
+  transition: all .3s;
+}
+.cid-tfXaVXqwLS .navbar .dropdown-item {
+  padding: .5rem 1.8rem;
+}
+.cid-tfXaVXqwLS .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-tfXaVXqwLS .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-tfXaVXqwLS .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-tfXaVXqwLS .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-tfXaVXqwLS .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 5.6rem);
+  }
+}
+.cid-tfXaVXqwLS .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-tfXaVXqwLS .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-tfXaVXqwLS .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 55%;
+}
+.cid-tfXaVXqwLS .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-tfXaVXqwLS .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: .25rem 1.5rem;
+  text-align: center;
+}
+.cid-tfXaVXqwLS .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
+@media (max-width: 991px) {
+  .cid-tfXaVXqwLS .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-tfXaVXqwLS .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-tfXaVXqwLS .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-tfXaVXqwLS .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-tfXaVXqwLS .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 55%;
+  }
+  .cid-tfXaVXqwLS .navbar .navbar-logo img {
+    height: 3.8rem !important;
+  }
+  .cid-tfXaVXqwLS .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-tfXaVXqwLS .navbar .dropdown-menu .dropdown-item {
+    padding: .25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-tfXaVXqwLS .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-tfXaVXqwLS .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-tfXaVXqwLS .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+  }
+}
+.cid-tfXaVXqwLS .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-tfXaVXqwLS .navbar.navbar-short .navbar-logo img {
+  height: 3rem !important;
+}
+.cid-tfXaVXqwLS .navbar.navbar-short .navbar-brand {
+  padding: 0;
+}
+.cid-tfXaVXqwLS .navbar-brand {
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 0;
+  transition: all .3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-tfXaVXqwLS .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-tfXaVXqwLS .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-tfXaVXqwLS .dropdown-item.active,
+.cid-tfXaVXqwLS .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-tfXaVXqwLS .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-tfXaVXqwLS .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-tfXaVXqwLS .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-tfXaVXqwLS .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #fcf8ff;
+}
+.cid-tfXaVXqwLS .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-tfXaVXqwLS .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-tfXaVXqwLS ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-tfXaVXqwLS .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-tfXaVXqwLS button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all .2s;
+  position: relative;
+  align-self: center;
+}
+.cid-tfXaVXqwLS button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: currentColor;
+}
+.cid-tfXaVXqwLS button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-tfXaVXqwLS button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-tfXaVXqwLS button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-tfXaVXqwLS button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-tfXaVXqwLS nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-tfXaVXqwLS nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-tfXaVXqwLS nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-tfXaVXqwLS nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-tfXaVXqwLS .navbar-dropdown {
+  padding: .5rem 1rem;
+}
+.cid-tfXaVXqwLS a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-tfXaVXqwLS .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-tfXaVXqwLS .navbar {
+    height: 77px;
+  }
+  .cid-tfXaVXqwLS .navbar.opened {
+    height: auto;
+  }
+  .cid-tfXaVXqwLS .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
 }
 .cid-ux3HJU0xu3 {
   padding-top: 5rem;
