--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2146,6 +2146,9 @@ a {
 .cid-tzEh8PUB8f .mbr-section-title {
   text-align: left;
 }
+.cid-tzEh8PUB8f P {
+  text-align: left;
+}
 .cid-ux3RYkh5DY {
   padding-top: 4rem;
   padding-bottom: 2rem;
@@ -2526,6 +2529,42 @@ a {
   width: 100%;
 }
 .cid-tzE9luswOm .mbr-description {
+  text-align: center;
+}
+.cid-uI5jVCj6XT {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-uI5jVCj6XT .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uI5jVCj6XT .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 991px) {
+  .cid-uI5jVCj6XT .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-uI5jVCj6XT .row {
+  flex-direction: row-reverse;
+}
+.cid-uI5jVCj6XT img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-uI5jVCj6XT .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-uI5jVCj6XT .mbr-section-title {
   text-align: center;
 }
 .cid-tpRqYHuF5L {
